@@ -10,8 +10,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.mockito.junit.jupiter.MockitoSettings;
-import org.mockito.quality.Strictness;
 
 import java.util.Collections;
 import java.util.List;
@@ -83,13 +81,13 @@ class RouteCalculatorServiceTest {
         when(carrerRepository.findCameresNearRoute(any(), anyDouble())).thenReturn(Collections.emptyList());
         when(carrerRepository.findEscalesNearRoute(any(), anyDouble())).thenReturn(Collections.emptyList());
 
-        Filtre f = new Filtre();
+        Filtre f = new Filtre(FiltreEnum.CONFORT);
         RouteResponseDTO response = routeCalculatorService.getBestRoute(origin, destination, 1, f);
 
         assertNotNull(response);
         assertEquals(1, response.getRoutes().size());
 
-        Route route = response.getRoutes().get(0);
+        Route route = response.getRoutes().getFirst();
         assertEquals(2, route.getPois().size());
 
         PoiDTO poiComissaria = route.getPois().stream().filter(p -> p.getType().equals("COMISSARIA")).findFirst().orElse(null);
@@ -139,7 +137,7 @@ class RouteCalculatorServiceTest {
         when(carrerRepository.getCoordsFromNodeIds(any()))
                 .thenReturn(List.of(c1, c2));
 
-        Filtre f = new Filtre();
+        Filtre f = new Filtre(FiltreEnum.CONFORT);
         RouteResponseDTO response = routeCalculatorService.getBestRoute(origin, dest, nRoutes, f);
 
         assertNotNull(response);
@@ -172,7 +170,7 @@ class RouteCalculatorServiceTest {
         when(carrerRepository.getCoordsFromNodeIds(any()))
                 .thenReturn(List.of(c1));
 
-        Filtre f = new Filtre();
+        Filtre f = new Filtre(FiltreEnum.CONFORT);
         RouteResponseDTO response = routeCalculatorService.getBestRoute(origin2, dest2, nRoutes, f);
 
         assertNotNull(response);
@@ -205,7 +203,7 @@ class RouteCalculatorServiceTest {
         when(carrerRepository.getCoordsFromNodeIds(any()))
                 .thenReturn(List.of());
 
-        Filtre f = new Filtre();
+        Filtre f = new Filtre(FiltreEnum.CONFORT);
         RouteResponseDTO response = routeCalculatorService.getBestRoute(origin, dest, nRoutes, f);
 
         assertNotNull(response);
@@ -241,7 +239,7 @@ class RouteCalculatorServiceTest {
         when(carrerRepository.getCoordsFromNodeIds(any()))
                 .thenReturn(List.of());
 
-        Filtre f = new Filtre();
+        Filtre f = new Filtre(FiltreEnum.CONFORT);
         RouteResponseDTO response = routeCalculatorService.getBestRoute(origin, dest, nRoutes, f);
 
         assertNotNull(response);
